@@ -12,7 +12,7 @@
 	</PROPS>
 	<RULES ESCAPE="\" IGNORE_CASE="FALSE" 
 	    HIGHLIGHT_DIGITS="TRUE" 
-	    DIGIT_RE="(0x[[:xdigit:]]+|[[:digit:]]+(e[[:digit:]]*)?)[lLdDfF]?">
+	    DIGIT_RE="(0x[[:xdigit:]]+[lL]?|[[:digit:]]+(e[[:digit:]]*)?[lLdDfF]?)">
 		<!-- comments -->
 		<EOL_SPAN TYPE="COMMENT1">#</EOL_SPAN>
 
